# orc

./: .gitattributes  .gitignore  README.md  build-and-install.sh  dev.sh  install.sh  make.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml
data/: pyproject.toml
data/src/orc_data/: en_GB-alba-medium.onnx.json
src/: config.md
src/orc/: __init__.py  api.py  config.py  dal.py  executor.py  model.py  runner.py  view.py
src/orc/static/: orc.css
src/orc/templates/: base.html  button.html  config.html  schedule.html
tests/: conftest.py  test_api.py  test_model.py
