[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling >= 1.26",
]

[project]
dependencies = [
    "APScheduler==3.11.2",
    "Flask==3.1.3",
    "skyfield==1.54",
    "bitwarden-sdk==2.0.0",
    "gunicorn==23.0.0",
    "icalendar==7.0.3",
    "mistletoe==1.5.1",
    "numpy==2.4.4",
    "piper-tts==1.4.2",
    "pychromecast==14.0.5",
    "pygame==2.6.1",
    "recurring-ical-events==3.8.1",
    "requests==2.33.0",
    "sounddevice==0.5.5",
    "yt-dlp==2026.3.17",
]
name = "orc"
version = "0.0.1"

[project.optional-dependencies]
test = [
    "mock==5.2.0",
    "pytest==9.0.3",
]

[project.scripts]
orc = "orc.worker:main"
test = "orc.worker:test"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
src_paths = ["src/orc"]

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = [ "src" ]
testpaths = [ "tests" ]

[tool.hatch.build.targets.wheel]
packages = ["src/orc"]
include = ["src/orc/pkg"]


